@@ -1,3 +1,8 @@
+2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* AssemblyInfo.cs:
+	* MonoDevelop.XmlEditor.addin.xml: Bump MD version.
+
 2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.XmlEditor/XmlEditorService.cs:
